--- a/tasksData.json
+++ b/tasksData.json
@@ -1,34 +1,64 @@
 {
-    "tasks": [
-        {"id": 1,
-        "title": "Plumbing Request",
-        "description": "Bathtub is not filling up. Need plumbing assistance ASAP",
-        "creation_date": "2022-12-01",
-        "stage": "Service Planned",
-        "last_modified": "2023-03-14",
-        "modified_by": "Facility Manager",
-        "facility": "Apartment 103"
-        },
-        {"id": 2,
-        "title": "Broken window",
-        "description": "A window in the appartment has a scratch. Need to find a repacement",
-        "creation_date": "2022-12-15",
-        "stage": "Replacement Ordered",
-        "last_modified": "2023-03-15",
-        "modified_by": "Procurement Manager",
-        "facility": "Apartment 203"
-        },
-        {"id": 3,
-        "title": "Fire alarm beeping",
-        "description": "The customer is saying that the fire alarm is beeping.",
-        "creation_date": "2022-03-16",
-        "stage": "New Request",
-        "last_modified": "2023-03-16",
-        "modified_by": "Facility Manager",
-        "facility": "Apartment 214"
-        }
-        
-        
-    ]
-    
+"tasks": [
+{
+"Prengi ID": 1212,
+"Creatio ID": "eab4c9ad-2f84-4b7c-a1f1-3248aabe69f1",
+"Title": "Fix leaky faucet",
+"Description": "Repair the leaky faucet in the kitchen sink to prevent water waste and potential damage.",
+"Created at": "2023-03-02",
+"Last Modified on": "2023-03-12",
+"User created": "John Smith",
+"Stage": "In progress",
+"Facility": "Apartment 204",
+"Modified By": "Jane Doe"
+},
+{
+"Prengi ID": 1345,
+"Creatio ID": "fd6f159b-0f47-4c09-a9fd-8da1df6a59a7",
+"Title": "Replace lightbulbs",
+"Description": "Replace all outdated lightbulbs in the living room with energy-efficient LED bulbs.",
+"Created at": "2023-03-05",
+"Last Modified on": "2023-03-14",
+"User created": "Alice Johnson",
+"Stage": "Completed",
+"Facility": "Apartment 204",
+"Modified By": "Bob Anderson"
+},
+{
+"Prengi ID": 1478,
+"Creatio ID": "19b9db9d-21a2-4b94-a5e1-8a98f494dc56",
+"Title": "Install smoke detectors",
+"Description": "Ensure safety by installing new smoke detectors in each bedroom and common area.",
+"Created at": "2023-03-10",
+"Last Modified on": "2023-03-15",
+"User created": "Charles Brown",
+"Stage": "Pending",
+"Facility": "Apartment 204",
+"Modified By": "Diana Evans"
+},
+{
+"Prengi ID": 1503,
+"Creatio ID": "3b3c8497-1a53-4d7f-ba07-8a7a3e5f33f0",
+"Title": "Clean air ducts",
+"Description": "Schedule a professional cleaning of the air ducts to improve air quality and energy efficiency.",
+"Created at": "2023-03-12",
+"Last Modified on": "2023-03-18",
+"User created": "Edward Gomez",
+"Stage": "Scheduled",
+"Facility": "Apartment 204",
+"Modified By": "Fiona Hernandez"
+},
+{
+"Prengi ID": 1689,
+"Creatio ID": "95b60a1c-df45-4d20-8e5b-9c6e7882d695",
+"Title": "Repaint living room",
+"Description": "Hire a professional painter to refresh the living room walls with a modern, neutral color.",
+"Created at": "2023-03-16",
+"Last Modified on": "2023-03-20",
+"User created": "George Lee",
+"Stage": "In progress",
+"Facility": "Apartment 204",
+"Modified By": "Hannah Martin"
+}
+]
 }
