--- a/tasksData.json
+++ b/tasksData.json
@@ -1,64 +1,65 @@
 {
-"tasks": [
-{
-"Prengi ID": 1212,
-"Creatio ID": "eab4c9ad-2f84-4b7c-a1f1-3248aabe69f1",
-"Title": "Fix leaky faucet",
-"Description": "Repair the leaky faucet in the kitchen sink to prevent water waste and potential damage.",
-"Created at": "2023-03-02",
-"Last Modified on": "2023-03-12",
-"User created": "John Smith",
-"Stage": "In progress",
-"Facility": "Apartment 204",
-"Modified By": "Jane Doe"
-},
-{
-"Prengi ID": 1345,
-"Creatio ID": "fd6f159b-0f47-4c09-a9fd-8da1df6a59a7",
-"Title": "Replace lightbulbs",
-"Description": "Replace all outdated lightbulbs in the living room with energy-efficient LED bulbs.",
-"Created at": "2023-03-05",
-"Last Modified on": "2023-03-14",
-"User created": "Alice Johnson",
-"Stage": "Completed",
-"Facility": "Apartment 204",
-"Modified By": "Bob Anderson"
-},
-{
-"Prengi ID": 1478,
-"Creatio ID": "19b9db9d-21a2-4b94-a5e1-8a98f494dc56",
-"Title": "Install smoke detectors",
-"Description": "Ensure safety by installing new smoke detectors in each bedroom and common area.",
-"Created at": "2023-03-10",
-"Last Modified on": "2023-03-15",
-"User created": "Charles Brown",
-"Stage": "Pending",
-"Facility": "Apartment 204",
-"Modified By": "Diana Evans"
-},
-{
-"Prengi ID": 1503,
-"Creatio ID": "3b3c8497-1a53-4d7f-ba07-8a7a3e5f33f0",
-"Title": "Clean air ducts",
-"Description": "Schedule a professional cleaning of the air ducts to improve air quality and energy efficiency.",
-"Created at": "2023-03-12",
-"Last Modified on": "2023-03-18",
-"User created": "Edward Gomez",
-"Stage": "Scheduled",
-"Facility": "Apartment 204",
-"Modified By": "Fiona Hernandez"
-},
-{
-"Prengi ID": 1689,
-"Creatio ID": "95b60a1c-df45-4d20-8e5b-9c6e7882d695",
-"Title": "Repaint living room",
-"Description": "Hire a professional painter to refresh the living room walls with a modern, neutral color.",
-"Created at": "2023-03-16",
-"Last Modified on": "2023-03-20",
-"User created": "George Lee",
-"Stage": "In progress",
-"Facility": "Apartment 204",
-"Modified By": "Hannah Martin"
-}
-]
-}
+    "tasks": [
+      {
+        "id": 1212,
+        "creatio_id": "eab4c9ad-2f84-4b7c-a1f1-3248aabe69f1",
+        "title": "Fix leaky faucet",
+        "description": "Repair the leaky faucet in the kitchen sink to prevent water waste and potential damage.",
+        "creation_date": "2023-03-02",
+        "last_modified": "2023-03-12",
+        "created_by": "John Smith",
+        "stage": "In progress",
+        "facility": "Apartment 204",
+        "modified_by": "Jane Doe"
+      },
+      {
+        "id": 1345,
+        "creatio_id": "fd6f159b-0f47-4c09-a9fd-8da1df6a59a7",
+        "title": "Replace lightbulbs",
+        "description": "Replace all outdated lightbulbs in the living room with energy-efficient LED bulbs.",
+        "creation_date": "2023-03-05",
+        "last_modified": "2023-03-14",
+        "created_by": "Alice Johnson",
+        "stage": "Completed",
+        "facility": "Apartment 204",
+        "modified_by": "Bob Anderson"
+      },
+      {
+        "id": 1478,
+        "creatio_id": "19b9db9d-21a2-4b94-a5e1-8a98f494dc56",
+        "title": "Install smoke detectors",
+        "description": "Ensure safety by installing new smoke detectors in each bedroom and common area.",
+        "creation_date": "2023-03-10",
+        "last_modified": "2023-03-15",
+        "created_by": "Charles Brown",
+        "stage": "Pending",
+        "facility": "Apartment 204",
+        "modified_by": "Diana Evans"
+      },
+      {
+        "id": 1503,
+        "creatio_id": "3b3c8497-1a53-4d7f-ba07-8a7a3e5f33f0",
+        "title": "Clean air ducts",
+        "description": "Schedule a professional cleaning of the air ducts to improve air quality and energy efficiency.",
+        "creation_date": "2023-03-12",
+        "last_modified": "2023-03-18",
+        "created_by": "Edward Gomez",
+        "stage": "Scheduled",
+        "facility": "Apartment 204",
+        "modified_by": "Fiona Hernandez"
+      },
+      {
+        "id": 1689,
+        "creatio_id": "95b60a1c-df45-4d20-8e5b-9c6e7882d695",
+        "title": "Repaint living room",
+        "description": "Hire a professional painter to refresh the living room walls with a modern, neutral color.",
+        "creation_date": "2023-03-16",
+        "last_modified": "2023-03-20",
+        "created_by": "George Lee",
+        "stage": "In progress",
+        "facility": "Apartment 204",
+        "modified_by": "Hannah Martin"
+      }
+    ]
+  }
+  
