--- a/tasksData.json
+++ b/tasksData.json
@@ -2,101 +2,113 @@
     "ContentType": "Facility Management",
     "tasks": [
       {
-        "id": 1212,
-        "creatio_id": "eab4c9ad-2f84-4b7c-a1f1-3248aabe69f1",
-        "title": "Fix leaky faucet",
-        "description": "Repair the leaky faucet in the kitchen sink to prevent water waste and potential damage.",
-        "creation_date": "2023-03-02",
-        "last_modified": "2023-03-12",
-        "created_by": "John Smith",
+        "id": 1690,
+        "creatio_id": "3a70b2e3-5f67-467c-a6ac-f5c5b5d5e81f",
+        "title": "Fix broken window",
+        "description": "Replace the broken window glass in the living room.",
+        "creation_date": "2023-04-12",
+        "last_modified": "2023-04-15",
+        "created_by": "Michael Johnson",
         "stage": "In progress",
-        "facility": "Apartment 204",
-        "modified_by": "Jane Doe",
-        "Workflow": "Electricity",
+        "facility": "Floor 2 - Apartment 201",
+        "modified_by": "Sophia Davis",
+        "Workflow": "Broken Window",
         "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      },
-      {
-        "id": 1345,
-        "creatio_id": "fd6f159b-0f47-4c09-a9fd-8da1df6a59a7",
-        "title": "Replace lightbulbs",
-        "description": "Replace all outdated lightbulbs in the living room with energy-efficient LED bulbs.",
-        "creation_date": "2023-03-05",
-        "last_modified": "2023-03-14",
-        "created_by": "Alice Johnson",
-        "stage": "Completed",
-        "facility": "Apartment 204",
-        "modified_by": "Bob Anderson",
-        "Workflow": "Electricity",
-        "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      },
-      {
-        "id": 1478,
-        "creatio_id": "19b9db9d-21a2-4b94-a5e1-8a98f494dc56",
-        "title": "Install smoke detectors",
-        "description": "Ensure safety by installing new smoke detectors in each bedroom and common area.",
-        "creation_date": "2023-03-10",
-        "last_modified": "2023-03-15",
-        "created_by": "Charles Brown",
-        "stage": "Pending",
-        "facility": "Apartment 204",
-        "modified_by": "Diana Evans",
-        "Workflow": "Electricity",
-        "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      },
-      {
-        "id": 1503,
-        "creatio_id": "3b3c8497-1a53-4d7f-ba07-8a7a3e5f33f0",
-        "title": "Clean air ducts",
-        "description": "Schedule a professional cleaning of the air ducts to improve air quality and energy efficiency.",
-        "creation_date": "2023-03-12",
-        "last_modified": "2023-03-18",
-        "created_by": "Edward Gomez",
-        "stage": "Scheduled",
-        "facility": "Apartment 204",
-        "modified_by": "Fiona Hernandez",
-        "Workflow": "Electricity",
-        "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      },
-      {
-        "id": 1689,
-        "creatio_id": "95b60a1c-df45-4d20-8e5b-9c6e7882d695",
-        "title": "Repaint living room",
-        "description": "Hire a professional painter to refresh the living room walls with a modern, neutral color.",
-        "creation_date": "2023-03-16",
-        "last_modified": "2023-03-20",
-        "created_by": "George Lee",
-        "stage": "In progress",
-        "facility": "Apartment 204",
-        "modified_by": "Hannah Martin",
-        "Workflow": "Electricity",
-        "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      },
-      {
-        "id": 1219,
-        "creatio_id": "64c1e783-6566-4dcb-8b42-0f686a179a15",
-        "title": "Landscape courtyard",
-        "description": "Design and implement a low-maintenance landscaping plan for the building's courtyard area.",
-        "creation_date": "2023-03-02",
-        "last_modified": "2023-03-12",
-        "created_by": "John Smith",
-        "stage": "In progress",
-        "facility": "Apartment 204",
-        "modified_by": "Jane Doe",
-        "Workflow": "Electricity",
-        "Department": "Maintenance department",
-        "User Executor": "Illia Shulha",
-        "Domain": "demo"
-      }
+        "User Executor": "Mykhaylo Mashchenko",
+        "Domain": "demo",
+        "workflowID": 350,
+        "facilityID": 2001
+        },
+        {
+          "id": 1691,
+          "creatio_id": "1a34c7b6-74cd-46d3-a2f2-2f7d2c24d8b1",
+          "title": "Unjam stuck elevator",
+          "description": "Inspect and repair the elevator mechanism to ensure smooth operation.",
+          "creation_date": "2023-04-20",
+          "last_modified": "2023-04-24",
+          "created_by": "Emma Thompson",
+          "stage": "In progress",
+          "facility": "Floor 1 - Central Office",
+          "modified_by": "Olivia Williams",
+          "Workflow": "Stuck Elevator",
+          "Department": "Maintenance department",
+          "User Executor": "Illia Shulha",
+          "Domain": "demo",
+          "workflowID": 456,
+          "facilityID": 1001
+          },
+          {
+            "id": 1692,
+            "creatio_id": "9fbeb1d6-cd49-423e-a3b3-0f8a66c6b1e1",
+            "title": "Repair broken window latch",
+            "description": "Fix the broken window latch in the bedroom to ensure proper closing and security.",
+            "creation_date": "2023-04-25",
+            "last_modified": "2023-04-29",
+            "created_by": "Ava Martinez",
+            "stage": "In progress",
+            "facility": "Floor 2 - Apartment 202",
+            "modified_by": "Isabella Rodriguez",
+            "Workflow": "Broken Window",
+            "Department": "Maintenance department",
+            "User Executor": "Mykhaylo Mashchenko",
+            "Domain": "demo",
+            "workflowID": 350,
+            "facilityID": 2002
+            },
+            {
+              "id": 1693,
+              "creatio_id": "01cd1e92-3d97-4b71-9f72-a1baa1a1c159",
+              "title": "Elevator maintenance",
+              "description": "Perform routine maintenance on the elevator to ensure safety and efficiency.",
+              "creation_date": "2023-05-01",
+              "last_modified": "2023-05-05",
+              "created_by": "Mia Jackson",
+              "stage": "In progress",
+              "facility": "Floor 1 - Restrooms",
+              "modified_by": "Charlotte Clark",
+              "Workflow": "Stuck Elevator",
+              "Department": "Maintenance department",
+              "User Executor": "Illia Shulha",
+              "Domain": "demo",
+              "workflowID": 456,
+              "facilityID": 1002
+            },
+            {
+              "id": 1694,
+              "creatio_id": "7b2d0196-4ad6-4b6c-b663-9f69b9d631b2",
+              "title": "Inspect HVAC system",
+              "description": "Examine the HVAC system for potential issues and ensure optimal performance.",
+              "creation_date": "2023-04-18",
+              "last_modified": "2023-04-22",
+              "created_by": "Harper Lewis",
+              "stage": "In progress",
+              "facility": "Floor 1 - Central Office",
+              "modified_by": "Ella Young",
+              "Workflow": "HVAC needs maintenance",
+              "Department": "Maintenance department",
+              "User Executor": "Illia Shulha",
+              "Domain": "demo",
+              "workflowID": 237,
+              "facilityID": 1001
+              },
+              {
+                "id": 1695,
+                "creatio_id": "6a01a05a-61b7-4e40-a9d4-1dddb0dd6c2a",
+                "title": "Clean HVAC filters",
+                "description": "Clean and replace the filters in the HVAC system to improve air quality.",
+                "creation_date": "2023-04-28",
+                "last_modified": "2023-05-02",
+                "created_by": "Lily Harris",
+                "stage": "In progress",
+                "facility": "Floor 2 - Apartment 203",
+                "modified_by": "Sofia Walker",
+                "Workflow": "HVAC needs maintenance",
+                "Department": "Maintenance department",
+                "User Executor": "Mykhaylo Mashchenko",
+                "Domain": "demo",
+                "workflowID": 237,
+                "facilityID": 2003
+                }
     ]
   }
   
